Added more config params
added additional functionality